# brahmanda

./: BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  bench-history.csv
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs
scripts/: bench-history.sh  version-bump.sh
src/: constants.rs  cosmic_web.rs  cosmology.rs  error.rs  halo.rs  lib.rs  logging.rs  morphology.rs  power_spectrum.rs
tests/: adversarial.rs  integration.rs  invariants.rs  serde_roundtrip.rs
