[package]
name = "brahmanda"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Brahmanda — galactic structure, cosmic web topology, and large-scale cosmological dynamics"
homepage = "https://github.com/MacCracken/brahmanda"
repository = "https://github.com/MacCracken/brahmanda"
readme = "README.md"
documentation = "https://docs.rs/brahmanda"
keywords = ["galaxy", "cosmology", "dark-matter", "large-scale-structure", "science"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
hisab = "1.4"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[features]
default = ["std"]
std = ["serde/std", "thiserror/std"]
full = ["std", "logging"]
logging = ["dep:tracing-subscriber"]

[[bench]]
name = "benchmarks"
harness = false

[[test]]
name = "integration"

[[example]]
name = "basic"
